--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ deploy:
   provider: script
   skip_cleanup: true
   script:
-  - curl -T helloworld-1.1.$TRAVIS_BUILD_NUMBER-Linux.deb -ucezarnik:$BINTRAY_API_KEY "https://api.bintray.com/content/cezarnik/homework/allocator/$TRAVIS_BUILD_NUMBER/allocator-1.1.$TRAVIS_BUILD_NUMBER-Linux.deb;deb_distribution=trusty; deb_component=main;deb_architecture=amd64; publish=1"
+  - curl -T allocator-1.1.$TRAVIS_BUILD_NUMBER-Linux.deb -ucezarnik:$BINTRAY_API_KEY "https://api.bintray.com/content/cezarnik/homework/allocator/$TRAVIS_BUILD_NUMBER/allocator-1.1.$TRAVIS_BUILD_NUMBER-Linux.deb;deb_distribution=trusty; deb_component=main;deb_architecture=amd64; publish=1"
