--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: cpp
+before_script:
 script:
   - cmake .
   - cmake --build . 
@@ -7,4 +8,4 @@ deploy:
   provider: script
   skip_cleanup: true
   script:
-  - curl -T allocator-1.1.$TRAVIS_BUILD_NUMBER-Linux.deb -ucezarnik:$BINTRAY_API_KEY "https://api.bintray.com/content/cezarnik/homework/allocator/$TRAVIS_BUILD_NUMBER/allocator-1.1.$TRAVIS_BUILD_NUMBER-Linux.deb;deb_distribution=trusty; deb_component=main;deb_architecture=amd64; publish=1"
+  - curl -T allocator-1.1.$TRAVIS_BUILD_NUMBER-Linux.deb -ucezarnik:$BINTRAY_API_KEY "https://api.bintray.com/content/cezarnik/homework/allocator/$TRAVIS_BUILD_NUMBER/allocator-1.1.$TRAVIS_BUILD_NUMBER-Linux.deb;deb_distribution=trusty;deb_component=main;deb_architecture=amd64;publish=1"
