--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,9 @@
 language: cpp
 before_script:
+  - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
+  - sudo apt-get update 
+  - sudo apt-get install g++-7 libboost-test1.54-dev
+  - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-7 90 
 script:
   - cmake .
   - cmake --build . 
